# TestiPy

./: .gitignore  MANIFEST.in  README.md  README.mk  pyproject.toml  pytest.ini  requirements.txt  setup.py
Testi/: Requesti.py  Responsi.py  __init__.py
Testi/tests/unit/: test_request_mocking.py
tests/data/: session.har
tests/unit/: test_request_mocking.py
